add my_application field to /cargo/{id} response
